force-app/main/default/objects/Survey__c/fields/Processing_Flow__c.field-meta.xml
<CustomField>
    <fullName>Processing_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Processing Flow</label>
    <referenceTo>FlowRecord</referenceTo>
    <relationshipLabel>Surveys (Processing Flow)</relationshipLabel>
    <relationshipName>Surveys2</relationshipName>
    <type>Lookup</type>
</CustomField>