force-app/main/default/objects/Survey__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Type</label>
    <referenceTo>Survey_Type__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>