force-app/main/default/objects/Survey__c/fields/Surveyed__c.field-meta.xml
<CustomField>
    <fullName>Surveyed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surveyed</label>
    <type>Checkbox</type>
</CustomField>