force-app/main/default/objects/Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Survey_URL__c</columns>
    <columns>Survey_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Surveyed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>